# rb_ros

src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/srv/: CommunicatorRequest.srv
src/rb_communicator/: CMakeLists.txt  package.xml
src/rb_communicator/src/: rb_communicator_node.cpp
